<?xml version="1.0"?>
<package>
  <name>spark_description</name>
  <version>0.0.1</version>
  <description>
  	The spark_description package, which is used for spark plan.
  	
  	Copyright 2016 NXROBO INTERNATIONAL (HONG KONG) LIMITED.
  </description>
  <maintainer email="xiankai.chen@nxrobo.com">xiankai.chen</maintainer>
  <license>BSD</license>
  <url type="website">http://www.nxrobo.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>