<package>
  <name>spark_rtabmap</name>
  <version>2.3.7</version>
  <description>spark_navigation</description>
  <maintainer email="litian.zhuang@nxrobo.com">litian.zhuang</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/Robots/Spark</url>
  <author>yutong.xie</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
